--- a/index.html
+++ b/index.html
@@ -42,7 +42,13 @@
 
             <div class="showcase-form card">
                 <h2>Request a Demo</h2>
-                <form>
+                <form name="contact" method="POST" netlify-honeypot="bot-field" data-netlify="true">
+                    <input type="hidden" name="form-name" value="contact">
+                    <p class="hidden">
+                        <label>
+                            Don’t fill this out if you’re human: <input name="bot-field" />
+                        </label>
+                    </p>
                     <div class="form-control">
                         <input type="text" name="name" placeholder="Name" required>
                     </div>
@@ -112,36 +118,36 @@
     <!-- Languages  -->
     <section class="languages">
         <h2 class="md text-center my-2">
-            Supported Languages 
+            Supported Languages
         </h2>
         <div class="container flex">
             <div class="card">
                 <h4>Node.js</h4>
-                <img src="images/logos/node.png" alt=""> 
+                <img src="images/logos/node.png" alt="">
             </div>
             <div class="card">
                 <h4>Python</h4>
-                <img src="images/logos/python.png" alt=""> 
+                <img src="images/logos/python.png" alt="">
             </div>
             <div class="card">
                 <h4>C#</h4>
-                <img src="images/logos/csharp.png" alt=""> 
+                <img src="images/logos/csharp.png" alt="">
             </div>
             <div class="card">
                 <h4>Ruby</h4>
-                <img src="images/logos/ruby.png" alt=""> 
+                <img src="images/logos/ruby.png" alt="">
             </div>
             <div class="card">
                 <h4>PHP</h4>
-                <img src="images/logos/php.png" alt=""> 
+                <img src="images/logos/php.png" alt="">
             </div>
             <div class="card">
                 <h4>Scala</h4>
-                <img src="images/logos/scala.png" alt=""> 
+                <img src="images/logos/scala.png" alt="">
             </div>
             <div class="card">
                 <h4>Clojure</h4>
-                <img src="images/logos/clojure.png" alt=""> 
+                <img src="images/logos/clojure.png" alt="">
             </div>
 
         </div>
